initial make setup

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,8 +2,8 @@
     "name": "Milvus Distributed Dev Container Definition",
     "dockerComposeFile": ["./docker-compose-devcontainer.yml"],
     "service": "builder",
-    "initializeCommand": "scripts/devcontainer.sh",
-    "workspaceFolder": "/go/src/github.com/milvus-io/milvus",
+    "initializeCommand": "./scripts/devcontainer.sh",
+    "workspaceFolder": "/home",
     "remoteEnv": { "GOPROXY": "https://goproxy.cn" },
     "extensions": [
       "ms-vscode.cpptools",
